revises the all_term accepted in new.

--- a/config/locales/free_insurance.yml
+++ b/config/locales/free_insurance.yml
@@ -8,4 +8,4 @@ zh-CN:
         processed: "申请已处理"
         accepted: "申请已接受"
         id_num: "身份证号码"
-        accepted_all_terms: "保险须知与条款"
+        accepted_all_terms: "已阅读投保须知"
