--- a/config/locales/free_insurance.yml
+++ b/config/locales/free_insurance.yml
@@ -9,3 +9,4 @@ zh-CN:
         accepted: "申请已接受"
         id_num: "身份证号码"
         accepted_all_terms: "已阅读投保须知"
+        free_insurance_no: "保险凭证号"
